Implement homepage with TradingView widgets

--- a/app/globals.css
+++ b/app/globals.css
@@ -141,23 +141,16 @@
   }
 }
 
-@utility container {
-  @apply mx-auto max-w-screen-2xl px-4 md:px-6 lg:px-8;
-}
-@utility header-wrapper {
-  @apply flex justify-between items-center px-6 py-4 text-gray-500;
-}
-
 @layer utilities {
-  /* .container {
+  .container {
     @apply mx-auto max-w-screen-2xl px-4 md:px-6 lg:px-8;
-  } */
+  }
   .yellow-btn {
     @apply h-12 cursor-pointer bg-gradient-to-b from-yellow-400 to-yellow-500 hover:from-yellow-500 hover:to-yellow-400 text-gray-950 font-medium text-base rounded-lg shadow-lg disabled:opacity-50;
   }
-  /* .home-wrapper {
-    @apply text-gray-400 flex-col gap-4 md:gap-10 items-center sm:items-start; */
-  /* } */
+  .home-wrapper {
+    @apply text-gray-400 flex-col gap-4 md:gap-10 items-center sm:items-start;
+  }
   .home-section {
     @apply w-full gap-8 grid-cols-1 md:grid-cols-2 xl:grid-cols-3;
   }
